Wire TodoWrite into squad optimization