@@ -8,8 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 
-import java.util.stream.Collectors;
-
 @Component
 public class HeroSearchTool {
 
@@ -24,24 +22,38 @@ public class HeroSearchTool {
 
     @Tool(description = "Search for superheroes by name (case-insensitive substring match).")
     public List<HeroSummary> searchHeroes(@ToolParam(description = "Search query string") String query) {
-        // TODO: Call arenaApiClient.searchHeroes(query).stream().limit(20).map(h -> new
-        // HeroSummary(...)).collect(Collectors.toList())
-        throw new UnsupportedOperationException("TODO: Implement this tool");
+        return arenaApiClient.searchHeroes(query).stream()
+                .limit(20)
+                .map(this::toSummary)
+                .toList();
     }
 
     @Tool(description = "Filter heroes by alignment and/or publisher.")
     public List<HeroSummary> filterHeroes(
             @ToolParam(description = "Hero alignment (e.g., good, bad, neutral)") String alignment,
             @ToolParam(description = "Comic publisher (e.g., DC Comics, Marvel Comics)") String publisher) {
-        // TODO: Call arenaApiClient.filterHeroes(alignment,
-        // publisher).stream().limit(20).map(h -> new
-        // HeroSummary(...)).collect(Collectors.toList())
-        throw new UnsupportedOperationException("TODO: Implement this tool");
+        return arenaApiClient.filterHeroes(alignment, publisher).stream()
+                .limit(20)
+                .map(this::toSummary)
+                .toList();
     }
 
     @Tool(description = "Get detailed information about a specific hero by their ID.")
     public Hero getHeroDetails(@ToolParam(description = "Unique ID of the hero") int heroId) {
-        // TODO: Call arenaApiClient.getHero(heroId)
-        throw new UnsupportedOperationException("TODO: Implement this tool");
+        return arenaApiClient.getHero(heroId);
+    }
+
+    private HeroSummary toSummary(Hero hero) {
+        List<String> tags = hero.tags() == null ? List.of() : hero.tags().stream()
+                .map(String::valueOf)
+                .toList();
+
+        return new HeroSummary(
+                hero.id(),
+                hero.name(),
+                hero.role(),
+                hero.cost(),
+                hero.alignment(),
+                tags);
     }
 }
